2025-06-28T00:55:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15938700223 # 688
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-28
* notice: last 14d: unq all: 4 10
* notice: prev accum: outdated-unq outdated-all / unq all: 556 949 / 565 958
* notice: next accum: outdated-unq outdated-all / unq all: 556 949 / 566 959
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-27]

2025-06-27T00:57:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15915667172 # 687
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-27
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 556 949 / 564 957
* notice: next accum: outdated-unq outdated-all / unq all: 556 949 / 565 958
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-26]

2025-06-26T00:57:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15890431048 # 686
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-26
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 556 949 / 563 956
* notice: next accum: outdated-unq outdated-all / unq all: 556 949 / 564 957
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-25]

2025-06-25T00:57:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15864771960 # 685