@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-28T00:55:37Z",
-  "count_outdated" : 949,
-  "uniques_outdated" : 556,
-  "count" : 959,
-  "uniques" : 566,
+  "timestamp" : "2025-06-30T01:00:57Z",
+  "count_outdated" : 950,
+  "uniques_outdated" : 557,
+  "count" : 960,
+  "uniques" : 567,
   "clones" : [
-    {
-      "timestamp": "2025-06-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-18T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-06-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
