@@ -1,12 +1,7 @@
 {
   "count": 10,
-  "uniques": 4,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-06-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-18T00:00:00Z",
       "count": 1,
@@ -49,6 +44,11 @@
     },
     {
       "timestamp": "2025-06-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-29T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
