@@ -1,3 +1,12 @@
+2025-06-30T01:00:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15961425116 # 690
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-30
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 556 949 / 566 959
+* notice: next accum: outdated-unq outdated-all / unq all: 557 950 / 567 960
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-06-15] / [2025-06-29]
+
 2025-06-28T00:55:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15938700223 # 688
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-28
